--- a/src/style.css
+++ b/src/style.css
@@ -102,7 +102,7 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
   border-radius: 0.5em;
   padding: 0.5em;
   text-transform: uppercase;
-  margin-top: 2em;
+  margin-top: 0.5em;
 }
 
 .reveal h2 {
@@ -439,5 +439,13 @@ div .column img:not(.image-transparent){
 
 .title-logo {
   width: 25em;
-  padding: 2em;
+  padding: 1em;
+}
+
+/*********************************************
+ * TITLE SLIDES
+ *********************************************/
+
+.cosmo-slide img {
+  height: 80%;
 }
